--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 <body>
     <!-- Background Video -->
     <video autoplay muted loop id="background-video">
-        <source src="https://cdn.glitch.global/a07b2f64-ed79-4da8-9ac9-f585a3ef4748/Background.mp4?v=1729798369893" type="video/mp4">
+        <source src="https://www.kapwing.com/videos/6725e7f8f9292f08606553c6" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
@@ -256,7 +256,7 @@
                 </ul>
             </div>
             <div class="contact">
-                <h3>𝗖𝗔𝗡𝗧𝗘𝗖𝗧</h3>
+                <h3>𝗖𝗔𝗡𝗧A𝗖𝗧</h3>
                   <ul>
                     <li><a href="https://t.me/Denji40_bot" target="_blank">Telegram</a></li>
                 </ul>
@@ -272,7 +272,7 @@
     <!-- User Bio Section -->
     <div class="bio-container">
         <img src="https://cdn.glitch.global/a07b2f64-ed79-4da8-9ac9-f585a3ef4748/pfp.jpg?v=1729798339537" alt="User Profile" class="profile-pic">
-        <h1>𝗠𝗿 𝕯𝖎𝖆𝖇𝖑𝖔</h1>
+        <h1>Denji - Kun</h1>
         <p class="skills">METHOD MAKER | CARDER | OSINT</p>
     </div>
 
